# NumericalMethodsInStatisticalPhysics

./: .gitignore  CMakeLists.txt  HelloWorld.cpp  HelloWorld.h  RngTests.cpp  main.cpp  readme.md
Projects/Fractals/: BetheLattice.h  ConvergenceFits.sfit  Euclidean2DGraph.cpp  Euclidean2DGraph.h  Euclidean3DGraph.h  PlotResults.mlx  RNG_MT19937.h  WalkableGraph.h  fractals.cpp  importfile.m
Projects/Fractals/SimulationResults/BetheLattice/: betheLattice_10.tsv  betheLattice_11.tsv  betheLattice_4.tsv  betheLattice_5.tsv  betheLattice_6.tsv  betheLattice_7.tsv  betheLattice_8.tsv  betheLattice_9.tsv
Projects/Fractals/SimulationResults/Euclidean2D/: euclidean2D_0.tsv  euclidean2D_1.tsv  euclidean2D_2.tsv  euclidean2D_3.tsv  euclidean2D_4.tsv  euclidean2D_5.tsv  euclidean2D_6.tsv  euclidean2D_7.tsv
Projects/Fractals/SimulationResults/Euclidean3D/: euclidean3D_0.tsv  euclidean3D_1.tsv  euclidean3D_2.tsv  euclidean3D_3.tsv  euclidean3D_4.tsv  euclidean3D_5.tsv  euclidean3D_6.tsv  euclidean3D_7.tsv
Projects/HelloWorld/: HelloWorld.cpp  test.cpp  test.h
Projects/Ising/: SpinLattice.cpp  SpinLattice.h  SpinLattice2level.cpp  SpinLattice2level.h  SpinLatticeTheta.cpp  SpinLatticeTheta.h  ising.cpp  ising.h  isingHeadless.cpp  utils.h
Projects/Ising/results/: ReduceObservable.asv  ReduceObservable.m  ReduceObservableMulti.m  addReweightToData.mlx  fitEnergy.m  fitEnergy.mlx  fitEnergy.sfit  fitHeatCap.mlx  fitHeatCap.sfit  fitMagnetization.m  importfile.m  importfileAppend.m  postCalculations.mlx  postCalculationsMulti.mlx  reweightObs.m  reweightTemps.mlx
Projects/RngTests/: RNG_results.cpp  RNG_results.h  RngTests.cpp  RngTests.h  compareRNGs.tsv
Projects/SandPiles/: Cell.cpp  Cell.h  Configuration.cpp  Configuration.h  SandPiles.cpp  SandPiles.h  Slope_Cell.cpp  Slope_Cell.h  utils.h
Projects/TSP/: BackTracking.h  Graph.h  gist.h  minimizePermutations.h  tsp.cpp
test/ctest/: CMakeLists.txt  testConfiguration.cpp  testHelloWorld.cpp  testIsing.cpp  testRngTests.cpp
